=========
 Changes
=========

Here you can see the list of changes between each Dooku release.

0.5.0 (in development)
======================

- Drop Python 3.2 support. Almost everyone in Python community agreed
  to use Python 3.3 and above.
- Add Python 3.5 support.


0.4.0 (2015-09-12)
==================

- Add Python 2.7 support.
- Add ``dooku.conf.Conf.from_file`` method to load settings from
  a custom file format.
- Add ``dooku.iteritems`` module with ``chunk_by`` iteration
  algorithm.
- ``dooku.datetime.Local.tzname`` now returns a timezone name.
- ``dooku.conf.Conf`` now has representation similar to ``dict``.


0.3.0 (2015-01-09)
==================

- Add ``dooku.conf.Conf.from_json`` method that loads and updates a conf
  instance with data from a given JSON file.
- Add ``dooku.conf.Conf.from_yaml`` method that loads and updates a conf
  instance with data from a given YAML file.
- Do not install ``tests`` package (bugfix).


0.2.0 (2014-11-07)
==================

- Use ``collections.MutableMapping`` as base class for ``dooku.conf.Conf``.
- Add the changelog page to documentation.


0.1.0 (2014-10-03)
==================

- First public release.